src/index.css
* {
  padding: 0;
  margin: 0;
  font-family: "Poppins", sans-serif;
}

html{
  scroll-behavior: smooth;
}

:root {
  /* Color Scheme */
  --valo-dark: #0e1821;
  --valo-red: #ff4655;
  --valo-dark-red: #cf3f4b;
  --valo-white: #eeee;
}

::-webkit-scrollbar {
  width: .5rem;
}

::-webkit-scrollbar-track {
  background: var(--valo-dark);
}

::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  -webkit-border-radius: 1rem;
  -moz-border-radius: 1rem;
  -ms-border-radius: 1rem;
  -o-border-radius: 1rem;
  background: var(--valo-red);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--valo-dark-red);
}

a {
  text-decoration: none;
}

body {
  overflow-x: hidden;
  background-image: url("../public/assets/img/bg.webp");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

.img-container {
  overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
strong {
  overflow: hidden;
}

/* NAVBAR */
.navbar {
  overflow: hidden;
  z-index: 100;
  background-color: var(--valo-dark) !important;
}
.nav-button {
  background-color: var(--valo-red) !important;
  border: none !important;
  transition: ease-in 0.2s !important;
  -webkit-transition: ease-in 0.2s !important;
  -moz-transition: ease-in 0.2s !important;
  -ms-transition: ease-in 0.2s !important;
  -o-transition: ease-in 0.2s !important;
}
.nav-button:hover {
  background-color: var(--valo-dark-red) !important;
}

/* HEADER */
.header-section {
  height: 100vh;
  width: 100%;
}

.header-content {
  height: 78%;
  background-image: url("../public/assets/img/bg-header.webp");
  background-position: center;
  background-size: cover;
}

.header-overlay {
  position: absolute;
  top: 0;
  left: 0;
  background-color: #00000073;
  min-width: 100%;
  height: 90%;
  z-index: -1;
}

.agent-description-section .agent-name{
  text-transform: uppercase;
}

.agent-role-wrapper img{
  width: 2.2vw;
  height: 2.2vw;
}

/* AGENTS COMPONENTS */
.agents-header-section {
  height: 100vh;
  width: 100%;
}

#agentArt {
  height: 88%;
  width: 100%;
  top: 100px;
  left: 0;
  position: absolute;
  transition: all ease-in-out .3s;
  -webkit-transition: all ease-in-out .3s;
  -moz-transition: all ease-in-out .3s;
  -ms-transition: all ease-in-out .3s;
  -o-transition: all ease-in-out .3s;
}

.agents-header-container #myVideo {
  object-fit: cover;
  top: 0;
  left: 0;
  position: absolute;
  width: 100%;
  height: 90%;
  z-index: -1;
}

.agent-header-text{
  position: absolute;
  width: 75vw;
  height: 100%;
  top: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  color: #fff;
}

.agent-description-section {
  height: 90%;
  width: 100%;
}

.agent-description-section h1 {
  font-size: 2.5vw;
}
.agent-header-text .agent-number h1{
  font-size: 15rem;
}

.video-player {
  overflow: hidden !important;
}

/* AGENT SKILL COMPONENT */
.agent-skill .agent-skill-title{
  font-size: 5rem;
  margin-top: 10rem;
  margin-bottom: -1.4rem;
  margin-left: -10px;
}

.agent-skill-container {
  border: 1px solid #555;
  background-color: var(--valo-white);
  box-shadow: -10px 0px 0px 0px var(--valo-red);
  margin-bottom: 10rem;
}

#agentSkill {
  height: 100%;
  width: 600px;
  object-fit: cover;
}

.agent-skill-icon {
  border: 1px solid #999;
  filter: brightness(0.7);
  -webkit-filter: brightness(0.7);
  width: 90px;
  height: 90px;
  transition: all ease-in-out 0.1s;
  -webkit-transition: all ease-in-out 0.1s;
  -moz-transition: all ease-in-out 0.1s;
  -ms-transition: all ease-in-out 0.1s;
  -o-transition: all ease-in-out 0.1s;
}

.agent-skill-icon:hover {
  border: 1px solid #000;
  filter: brightness(1);
  -webkit-filter: brightness(1);
  background-color: var(--valo-red);
  cursor: pointer;
}

.agent-skill-icon.skill-selected {
  border: 2px solid #000;
  filter: brightness(0);
  -webkit-filter: brightness(0);
}
.agent-skill-icon.skill-selected:hover {
  background-color: var(--valo-red);
  filter: brightness(1);
  -webkit-filter: brightness(1);
  cursor: pointer;
}

.skill-description h3{
  margin-bottom: 1.5rem;
}

.agent-skill-vid{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.skill-description .badge:hover{
  background-color: var(--valo-red) !important;
}

/* SELECT AGENT COMPONENT */
.select-agent-cont h1{
  font-size: 6vw;
  text-transform: uppercase;
}

.select-agent-cont .agent-icon {
  width: 5vw;
  height: 5vw;
  border: solid 2px #999;
  filter: grayscale(1);
  -webkit-filter: grayscale(1);
  background-color: #fff;
}

.select-agent-cont .agent-selected {
  border: solid 2px var(--valo-red);
  filter: grayscale(0);
  -webkit-filter: grayscale(0);
}

.select-agent-cont .agent-icon:hover {
  border: solid 2px var(--valo-red);
  filter: grayscale(0);
  -webkit-filter: grayscale(0);
}

/* Footer */
footer{
  width: 100vw;
  margin-top: 20rem;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.footer-text{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 50%;
  position: absolute;
  background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgb(0, 0, 0, 0.7)), url("../public/assets/img/footer-bg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.footer-text .row{
  width: 15%;
}

footer h5{
  margin-bottom: 1rem;
}

footer img{
  width: 20%;
  margin-bottom: 4rem;
}

footer .btn{
  border: none;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  transition: all ease-in-out .2s;
  -webkit-transition: all ease-in-out .2s;
  -moz-transition: all ease-in-out .2s;
  -ms-transition: all ease-in-out .2s;
  -o-transition: all ease-in-out .2s;
}

footer .btn:hover{
  color: #fff;
  background-color: var(--valo-red);
}

/* About Component */
.about-container{
  margin: 10rem 0;
}

@media screen and (max-width: 1280px){
  /* Agent Header */
  .agent-header-text{
    width: 93.5vw;
  }
  .agent-description-section .agent-name{
    font-size: 2.8vw;
  }
  .agent-description-section p{
    font-size: 1.2vw;
  }
  .agent-role-wrapper .agent-role-text{
    font-size: 3vw;
  }

  /* Agent Skill */
  .agent-skill-icon {
    width: 6vw;
    height: 6vw;
  }

  /* Select Agent */
  .select-agent-cont .agent-icon {
    width: 6.5vw;
    height: 6.5vw;
  }

  /* footer */
  footer img{
    width: 30%;
  }

  .footer-text .row{
    width: 30%;
  }
}

/* Media Queries - Tablets */
@media screen and (max-width: 1024px) {
  /* Agent Header */
  #agentArt img{
    position: relative;
    width: fit-content;
    object-fit: cover;
  }
  
  .agent-header-text{
    position: relative;
    width: 100%;
    left: 0;
    color: var(--valo-dark);
  }
  
  .agent-header-text .agent-number{
    text-align: center;
  }
  
  .agent-description-section{
    padding: 2rem;
    box-shadow: -10px 0 0 0 var(--valo-red);
  }

  .agent-description-section p{
    width: 100%;
    font-size: 1.3rem;
  }

  .agent-description-section .agent-name{
    overflow: hidden;
    font-size: 13vw;
    text-transform: uppercase;
  }

  .agent-role-wrapper .agent-role-text{
    font-size: 6vw;
  }

  .agent-role-wrapper img{
    width: 5vw;
    height: 5vw;
    filter: brightness(0.1);
    -webkit-filter: brightness(0.1);
  }

  /* Agent Skill */
  .agent-skill-title strong{
    font-size: 15vw;
  }

  .agent-skill-icon {
    width: 15vw;
    height: 15vw;
  }
  
  .skill-description h3{
    font-size: 5vw;
  }
  
  .skill-description p{
    font-size: 3vw;
  }

  /* Select Agent */
  .select-agent-cont .agent-icon {
    width: 19vw;
    height: 19vw;
  }

  .select-agent-cont h1{
    font-size: 17vw;
  }

  /* footer */
  .footer-text .row{
    width: 40%;
  }

  footer img{
    width: 40%;
  }
}

/* Media Queries - Smartphones */
@media screen and (max-width: 640px){
  /* Agent Header */
  .agent-header-text{
    width: 100vw;
  }

  .agent-header-text .agent-number h1{
    font-size: 40vw;
  }

  .agent-description-section p{
    font-size: 4vw;
  }

  .agent-role-wrapper img{
    width: 10vw;
    height: 10vw;
  }

  .agent-role-wrapper .agent-role-text{
    font-size: 11vw;
  }

  /* Agent Skill */
  .agent-skill-title{
    font-size: 20vw !important;
    margin-bottom: -5.1vw !important;
  }

  .agent-skill-icon {
    width: 15.5vw;
    height: 15.5vw;
  }

  .skill-description h3{
    font-size: 7vw;
  }

  .skill-description p{
    font-size: 4vw;
  }

  /* Select Agent */
  .select-agent-cont .agent-icon {
    width: 27vw;
    height: 27vw;
    border: solid 2px #555;
  }
  
  .select-agent-cont .agent-icon:hover {
    border: solid 2px var(--valo-red);
  }

  /* footer */
  footer{
    text-align: center;
    font-size: 3vw !important;
  }

  .footer-text{
    padding: 2vw;
  }

  .footer-text .row{
    width: 75%;
  }

  footer img{
    width: 70%;
  }
}

